--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -26,10 +26,18 @@
   text-decoration: none;
 }
 
+#indicators {
+  padding: 16px;
+  height: 40%;
+  width: 100%;
+  overflow-y: auto;
+  display: block;
+}
+
 ion-content {
   #map {
     width: 100%;
-    height: 100%;
+    height: 60%;
     opacity: 0;
     transition: opacity 150ms ease-in;
     display: block;
